src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>NumberofMinutes__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount of time in minutes a user has to finish the exam</description>
        <label>Number of Minutes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofQuestions__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of questions the test taker will see</description>
        <label>Number of Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Randomized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If select, the questions on the exam will be displayed in a random order</description>
        <label>Randomized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowOneQuestion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked, the user responding to the survey will be given one question per page</description>
        <label>Show One Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowScore__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked, the user who responds to this survey will be able to view his/her score</description>
        <label>Show Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SurveyName__c</fullName>
        <label>Survey Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SurveyName__c</columns>
        <columns>NumberofQuestions__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>NumberofMinutes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Surveys Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <recordTypes>
        <fullName>Exam</fullName>
        <active>true</active>
        <description>A survey record type that represents an exam format</description>
        <label>Exam</label>
    </recordTypes>
    <recordTypes>
        <fullName>Survey</fullName>
        <active>true</active>
        <description>the default record type for survey</description>
        <label>Survey</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Survey_name_cannot_be_blank</fullName>
        <active>true</active>
        <description>the standard field &apos;name&apos; cannot be blank</description>
        <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Survey name cannot be blank</errorMessage>
    </validationRules>
</CustomObject>